Fix overflow with event description links

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -104,13 +104,18 @@ $link-focus-border: $primary;
   }
 }
 
+// Prevent overflowing of links in event cards, cannot be applied in scoped styles
+// TODO: Fix styling
+.event-description a {
+  word-break: break-all;
+}
+
 // Blockquote
 .content blockquote {
   border-left: 5px solid $forest-green-light !important;
 }
 
 // Navbar dropmenu
-
 .navbar-link:not(.is-arrowless) {
   padding-right: 2em !important;
   &::after {
